# CVOperationTask

./: CMakeLists.txt  Demo.cpp  Dockerfile  MnistClassifier.cpp  MnistClassifier.h  README.md  docker-compose.yml
x64/: CVOperationTask.ilk
